samples/_failures_safe/1761482200_154a32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_664ebdc5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_664ebdc5.c:155:9: error: expected identifier or ‘(’ at end of input
  155 |         Node
      |         ^~~~
./samples/SAFE/__tmp_664ebdc5.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_664ebdc5.c:155:9: error: expected declaration or statement at end of input
